2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-properties.c: Removed irrelevant owner 
    trust options from PGP key properties dialog
    
2006-08-16  Adam Schreiber  <sadam@clemson.edu>

    * agent/seahorse-agent.c:
    * plugins/nautilus/seahorse-pgp-preferences: Change
    PACKAGE macros to real names. Fixes #350683

2006-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Increment version number

2006-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * NEWS:
    * README: New version 0.8.2

2006-08-13  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent.c: Fix problem with leaving temp
    directories in ~/.gnome2/. Fixes #336491

2006-07-13  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-generate-adv.glade:
    * src/seahorse-generate-druid.glade:
    * src/seahorse-generate-select.glade: Remove non-translatable
    strings. Fixes #347297
    
2006-06-12  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove entry for no
	* po/no.po: Remove this.

2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c: Make keyid column sortable
    Fixes bug #340770
    
2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-signatures.c:
    * libseahorse/seahorse-util.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-op.c:
    * src/seahorse-key-properties.c: Fix date handling (leaks), and 
    don't display expire date for remote keys. Fixes bug# 340774
    
2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/eggtrayicon.c: Make background of tray icon transparent
    when necessary. Fixes bug #341171
    
2006-05-01  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Set translation domain
    properly on GtkActionEntry's. By Takeshi AIHANA. Fixes bug #340260 
    
2006-04-18  Clytie Siddall <clytie@riverland.net.au>
