@@ -1,3 +1,8 @@
+2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * agent/seahorse-agent-cache.c: Fix crasher when dsplaying
+    cached credentials in status window. Fix #352315
+    
 2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
 
     * src/seahorse-key-properties.c: Removed irrelevant owner 
